# cppcapture

./: .clang-format  .gitignore  .gitlab-ci.yml  About.md  CMakeLists.txt  Exceptions and Stack Traces for C on Windows, Linux, & Mac.URL  Expected Features – Sentry Documentation.URL  GitHub - BoardiesITSolutionscpp-datadogstatsd Send metrics from your C++ applications to your Datadog account.URL  GitHub - garrettsicklesDogFood A C++ API for DataDog communication.URL  GitHub - tsondergaardraven-crashdump crashdump agent for httpssentry.io.URL  README.md  clang-format.bat  cmake-debug.bat  cpp-datadogstatsdDataDogStatsD.cpp at master · BoardiesITSolutionscpp-datadogstatsd · GitHub.URL  sentry-sample.json · GitHub.URL  sockppsocket.cpp at master · fpagliughisockpp · GitHub.URL
examples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  anystring_test.cpp  breadcrumbs.cpp  channel.cpp  client.cpp  configure.cpp  debugging.h  event.cpp  http_encoder.h  json_encoder.cpp  network_socket.cpp  network_socket.h  network_socket_posix.h  network_socket_windows.h  raven.cpp  sender_thread.cpp  sender_thread.h  stacktrace.h  stacktrace_test.cpp  stacktrace_windows.cpp  systemutils.cpp  systemutils.h  systemutils_posix.cpp  systemutils_test.cpp  systemutils_windows.cpp  utils.cpp  utils.h
src/channels/: sentry.cpp  sentry.h  socket.cpp  socket_windows.h
src/encoder/: json_encoder.h  json_encoder_test.cpp  sentry.cpp  sentry.h
src/include/cppcapture/: anystring.h  breadcrumbs.h  channel.h  client.h  configure.h  default.h  event.h  eventlevel.h
src/include/raven/: channel.h  client.h  config.h  event.h  eventlevel.h  raven.h
src/network/: http_socket.cpp  http_socket.h  httpclient.h  socket.cpp  socket.h  socket_posix.h  socket_windows.cpp  socket_windows.h
test/: CMakeLists.txt  main.cpp
